--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>The Empyrean Theorists</title>
-    <link rel="icon" href="omgs/tempLogo">
+    <link rel="icon" href="imgs/tempLogo">
 </head>
 <body>
     <div id="upper-content-display">
